--- a/frontend/admin/stock-dashboard.html
+++ b/frontend/admin/stock-dashboard.html
@@ -18,6 +18,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
     />
+    <script src="../js/fetch_fallback.js"></script>
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;600;700;800&display=swap");
       body {
@@ -400,6 +401,7 @@
       const API_URL =
         "https://mishra-industries-ltd-yjfr.onrender.com/api/products";
       const SERVER_BASE = "https://mishra-industries-ltd-yjfr.onrender.com";
+      const adminToken = localStorage.getItem("adminToken");
 
       function toggleMobileMenu() {
         const nav = document.getElementById("mobileNav");
@@ -446,7 +448,10 @@
                   // Update Backend permanently
                   await fetch(`${API_URL}/edit/${product._id}`, {
                     method: "PUT",
-                    headers: { "Content-Type": "application/json" },
+                    headers: {
+                      "Content-Type": "application/json",
+                      Authorization: `Bearer ${adminToken || ""}`,
+                    },
                     body: JSON.stringify({
                       stock: newStock,
                       stockDeducted: true,
@@ -525,7 +530,10 @@
         try {
           const response = await fetch(`${API_URL}/edit/${id}`, {
             method: "PUT",
-            headers: { "Content-Type": "application/json" },
+            headers: {
+              "Content-Type": "application/json",
+              Authorization: `Bearer ${adminToken || ""}`,
+            },
             body: JSON.stringify({ stock: newQty }),
           });
           if (response.ok) {
