--- a/frontend/cart.html
+++ b/frontend/cart.html
@@ -13,6 +13,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
     />
+    <script src="js/fetch_fallback.js"></script>
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&display=swap");
       body {
@@ -170,6 +171,6 @@
         </div>
       </div>
     </div>
-  <script src="js/cart.js"></script>
+    <script src="js/cart.js"></script>
   </body>
 </html>
