--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,6 +17,8 @@
     />
     <link rel="stylesheet" href="css/style.css" />
 
+    <script src="js/fetch_fallback.js"></script>
+
     <style>
       /* Avatar Styling */
       .user-avatar-nav {
@@ -331,7 +333,11 @@
                 Our Vision
               </h3>
               <p class="text-gray-600 leading-relaxed font-medium">
-                To become the region’s most trusted and comprehensive source for premium electrical solutions, recognized as the essential link between global innovation and local development. We aim to define the standard for reliability in the electrical supply chain.
+                To become the region’s most trusted and comprehensive source for
+                premium electrical solutions, recognized as the essential link
+                between global innovation and local development. We aim to
+                define the standard for reliability in the electrical supply
+                chain.
               </p>
             </div>
           </div>
@@ -354,7 +360,12 @@
                 Our Mission
               </h3>
               <p class="text-gray-600 leading-relaxed font-medium">
-                At Mishra Industries Limited, our mission is to simplify the procurement process for our clients by offering unparalleled access to a vast range of top-tier branded electrical products under one roof. We are committed to delivering quality, ensuring on-time availability, and providing expert support to power projects of every scale.
+                At Mishra Industries Limited, our mission is to simplify the
+                procurement process for our clients by offering unparalleled
+                access to a vast range of top-tier branded electrical products
+                under one roof. We are committed to delivering quality, ensuring
+                on-time availability, and providing expert support to power
+                projects of every scale.
               </p>
             </div>
           </div>
@@ -492,29 +503,57 @@
               </div>
             </div>
           </div>
-          <div class="lg:col-span-2 bg-white p-8 md:p-12 rounded-[2.5rem] shadow-xl border border-gray-100">
-    <form id="queryForm" class="grid md:grid-cols-2 gap-8">
-        <div class="space-y-2">
-            <label class="text-[10px] font-black text-blue-900 uppercase tracking-widest ml-1">Your Name</label>
-            <input type="text" id="queryName" placeholder="Full Name" required
-                class="w-full p-4 bg-gray-50 border-2 border-transparent rounded-2xl outline-none focus:bg-white focus:border-orange-500 transition-all font-bold text-sm" />
-        </div>
-        <div class="space-y-2">
-            <label class="text-[10px] font-black text-blue-900 uppercase tracking-widest ml-1">Email Address</label>
-            <input type="email" id="queryEmail" placeholder="email@example.com" required
-                class="w-full p-4 bg-gray-50 border-2 border-transparent rounded-2xl outline-none focus:bg-white focus:border-orange-500 transition-all font-bold text-sm" />
-        </div>
-        <div class="md:col-span-2 space-y-2">
-            <label class="text-[10px] font-black text-blue-900 uppercase tracking-widest ml-1">Your Message</label>
-            <textarea id="queryMessage" placeholder="How can we help you?" required
-                class="w-full p-4 bg-gray-50 border-2 border-transparent rounded-2xl outline-none focus:bg-white focus:border-orange-500 transition-all font-bold text-sm h-32"></textarea>
-        </div>
-        <button type="submit" id="querySubmitBtn"
-            class="md:col-span-2 bg-blue-900 text-white font-black py-5 rounded-2xl hover:bg-orange-500 transition-all shadow-xl uppercase tracking-widest text-sm transform active:scale-95">
-            Send Message
-        </button>
-    </form>
-</div>
+          <div
+            class="lg:col-span-2 bg-white p-8 md:p-12 rounded-[2.5rem] shadow-xl border border-gray-100"
+          >
+            <form id="queryForm" class="grid md:grid-cols-2 gap-8">
+              <div class="space-y-2">
+                <label
+                  class="text-[10px] font-black text-blue-900 uppercase tracking-widest ml-1"
+                  >Your Name</label
+                >
+                <input
+                  type="text"
+                  id="queryName"
+                  placeholder="Full Name"
+                  required
+                  class="w-full p-4 bg-gray-50 border-2 border-transparent rounded-2xl outline-none focus:bg-white focus:border-orange-500 transition-all font-bold text-sm"
+                />
+              </div>
+              <div class="space-y-2">
+                <label
+                  class="text-[10px] font-black text-blue-900 uppercase tracking-widest ml-1"
+                  >Email Address</label
+                >
+                <input
+                  type="email"
+                  id="queryEmail"
+                  placeholder="email@example.com"
+                  required
+                  class="w-full p-4 bg-gray-50 border-2 border-transparent rounded-2xl outline-none focus:bg-white focus:border-orange-500 transition-all font-bold text-sm"
+                />
+              </div>
+              <div class="md:col-span-2 space-y-2">
+                <label
+                  class="text-[10px] font-black text-blue-900 uppercase tracking-widest ml-1"
+                  >Your Message</label
+                >
+                <textarea
+                  id="queryMessage"
+                  placeholder="How can we help you?"
+                  required
+                  class="w-full p-4 bg-gray-50 border-2 border-transparent rounded-2xl outline-none focus:bg-white focus:border-orange-500 transition-all font-bold text-sm h-32"
+                ></textarea>
+              </div>
+              <button
+                type="submit"
+                id="querySubmitBtn"
+                class="md:col-span-2 bg-blue-900 text-white font-black py-5 rounded-2xl hover:bg-orange-500 transition-all shadow-xl uppercase tracking-widest text-sm transform active:scale-95"
+              >
+                Send Message
+              </button>
+            </form>
+          </div>
         </div>
       </div>
     </section>
@@ -586,7 +625,6 @@
                   >Returns & Refunds</a
                 >
               </li>
-            
             </ul>
           </div>
 
@@ -707,9 +745,7 @@
             <div
               class="text-[10px] space-y-2 text-slate-400 leading-relaxed font-bold uppercase"
             >
-              <p >
-                Mishra Industries Limited
-              </p>
+              <p>Mishra Industries Limited</p>
               <p>CIN: U51909KA2008PTC046721P</p>
               <p>GSTIN: 29AAFCM5975L1ZO</p>
               <p>Purulia Road, Tatisilwai, Ranchi, Jharkhand: 835103, INDIA</p>
