--- a/frontend/product-details.html
+++ b/frontend/product-details.html
@@ -14,6 +14,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
     />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+    <script src="js/fetch_fallback.js"></script>
     <style>
       .custom-scrollbar::-webkit-scrollbar {
         width: 6px;
