--- a/frontend/register.html
+++ b/frontend/register.html
@@ -14,7 +14,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
     />
     <style>
-      body {
+      <script src="js/fetch_fallback.js" > </script > body {
         background-color: #f8fafc;
       }
       .active-tab {
